changement majeur dans le html/css (design final)

--- a/connexion.html
+++ b/connexion.html
@@ -1,76 +1,73 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="fr">
   <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Connexion ou inscription - Incidents Ottignies-Louvain-la-Neuve">
+    <title>Authentification - Incidents Ottignies-Louvain-la-Neuve</title>
     <link rel="stylesheet" href="styles.css">
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Main page</title>
-    <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
-    <!-- Optional theme -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-    <link rel="stylesheet" href="styles/web-app.css">
   </head>
   <body>
-<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
- <a class="navbar-brand" href="#" style="max-width: 3%;">
-    <img src="safe.png" class="img-fluid">
- </a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
+     <header>
+      <nav>
+        <a href="index.html" class="logo">
+          <img src="safe.png" alt="Logo Sécurité">
+        </a>
+        <ul class="nav-menu">
+          <li class="nav-item">
+            <a href="index.html" class="active">Accueil</a>
+          </li>
+          <li class="nav-item">
+            <a href="report.html">Signaler un incident</a>
+          </li>
+        </ul>
+        <div class="user-info">
+          <span class="username">Utilisateur</span>
+          <a href="connexion.html" class="btn btn-secondary">Se connecter</a>
+        </div>
+      </nav>
+    </header>
 
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="report.html">Signaler un incident</a>
-      </li>
-      <form class="form-inline my-2 my-lg-0">
-        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-      </form>
-    </ul>
-            <span class="nav-link"> Username</span>
-      <li class="nav-item">
-        <a class="nav-link" href="connexion.html">Se connecter</a>
-      </li>
-  </div>
-</nav>
-    <h1>Compte existant</h1>
-      <p>
-        <label>Nom de l'utilisateur :</label>
-        <input type="text" value="">
-      </p>
-      <p>
-        <label>Mot de passe :</label>
-        <input type="text" value="">
-      </p>
-      <p>
-        <button name="button">Se connecter</button>
-      </p>
-    <h2>Créer un compte</h2>
-    <p>
-        <label>Nom de l'utilisateur :</label>
-        <input type="text" value="">
-      </p>
-      <p>
-        <label>Mot de passe :</label>
-        <input type="text" value="">
-      </p>
-      <p>
-        <label>Nom complet :</label>
-        <input type="text" value="">
-      </p>
-      <p>
-        <label>Adresse email :</label>
-        <input type="text" value="">
-      </p>
-      <p>
-        <button name="button">S'enregistrer</button>
-      </p>
+    <main>
+      <div class="auth-container">
+        <section class="auth-section">
+          <h2>Se connecter</h2>
+          <form method="post" action="/login">
+            <div class="form-group">
+              <label for="username-login">Nom d'utilisateur :</label>
+              <input type="text" id="username-login" name="username" required>
+            </div>
+            <div class="form-group">
+              <label for="password-login">Mot de passe :</label>
+              <input type="password" id="password-login" name="password" required>
+            </div>
+            <button type="submit" class="btn btn-success">Se connecter</button>
+          </form>
+        </section>
+
+        <section class="auth-section">
+          <h2>Créer un compte</h2>
+          <form method="post" action="/register">
+            <div class="form-group">
+              <label for="username-register">Nom d'utilisateur :</label>
+              <input type="text" id="username-register" name="username" required>
+            </div>
+            <div class="form-group">
+              <label for="password-register">Mot de passe :</label>
+              <input type="password" id="password-register" name="password" required>
+            </div>
+            <div class="form-group">
+              <label for="fullname">Nom complet :</label>
+              <input type="text" id="fullname" name="fullname" required>
+            </div>
+            <div class="form-group">
+              <label for="email">Adresse email :</label>
+              <input type="email" id="email" name="email" required>
+            </div>
+            <button type="submit" class="btn btn-success">S'enregistrer</button>
+          </form>
+        </section>
+      </div>
+    </main>
   </body>
 </html>
