--- a/report.html
+++ b/report.html
@@ -1,58 +1,86 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="fr">
   <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Signaler un incident - Incidents Ottignies-Louvain-la-Neuve">
+    <title>Signaler un incident - Incidents Ottignies-Louvain-la-Neuve</title>
     <link rel="stylesheet" href="styles.css">
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Main page</title>
-    <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
-    <!-- Optional theme -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-    <link rel="stylesheet" href="styles/web-app.css">
   </head>
   <body>
-<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
- <a class="navbar-brand" href="#" style="max-width: 3%;">
-    <img src="safe.png" class="img-fluid">
- </a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
+     <header>
+      <nav>
+        <a href="index.html" class="logo">
+          <img src="safe.png" alt="Logo Sécurité">
+        </a>
+        <ul class="nav-menu">
+          <li class="nav-item">
+            <a href="index.html" class="active">Accueil</a>
+          </li>
+          <li class="nav-item">
+            <a href="report.html">Signaler un incident</a>
+          </li>
+        </ul>
+        <div class="user-info">
+          <span class="username">Utilisateur</span>
+          <a href="connexion.html" class="btn btn-secondary">Se connecter</a>
+        </div>
+      </nav>
+    </header>
 
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="report.html">Signaler un incident</a>
-      </li>
-      <form class="form-inline my-2 my-lg-0">
-        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-      </form>
-    </ul>
-            <span class="nav-link"> Username</span>
-      <li class="nav-item">
-        <a class="nav-link" href="connexion.html">Se connecter</a>
-      </li>
-  </div>
-</nav>
-    Description
-      <p>
-        <textarea name="textarea"
-                  rows="10" cols="50">Saisir un texte ici.</textarea>
-      </p>
-    Adresse
-      <p>
+    <main>
+      <section>
+        <h1>Signaler un incident</h1>
+        <p>Aidez-nous à améliorer notre commune en signalant un incident observé dans l'espace public.</p>
+        
+        <div class="info-box">
+          <strong>Important :</strong> Veuillez être le plus précis possible dans votre description et votre localisation pour faciliter le traitement de votre signalement.
+        </div>
 
-        <textarea name="textarea"
-        rows="10" cols="50">Saisir un texte ici.</textarea>
-      </p>
-          <p>
-        <button name="button">Soumettre</button>
-      </p>
+        <form method="post" action="/report">
+          <fieldset>
+            <legend><h2>Informations sur l'incident</h2></legend>
+
+            <div class="form-group">
+              <label for="incident-type">Type d'incident :</label>
+              <select id="incident-type" name="type" required>
+                <option value="">-- Sélectionner --</option>
+                <option value="nid-poule">Nid-de-poule</option>
+                <option value="feu-defaillant">Feu de circulation défaillant</option>
+                <option value="mobilier-deteriore">Mobilier urbain détérioré</option>
+                <option value="vegetation">Problème de végétation</option>
+                <option value="signalisation">Signalisation défaillante</option>
+                <option value="autre">Autre</option>
+              </select>
+            </div>
+
+            <div class="form-group">
+              <label for="incident-description">Description détaillée :</label>
+              <textarea id="incident-description" name="description" required placeholder="Décrivez l'incident de manière aussi précise que possible..."></textarea>
+            </div>
+
+            <div class="form-group">
+              <label for="incident-date">Date d'observation :</label>
+              <input type="date" id="incident-date" name="date" required>
+            </div>
+
+            <div class="form-group">
+              <label for="incident-location">Adresse ou localisation :</label>
+              <input type="text" id="incident-location" name="location" required placeholder="ex: Rue de Namur, 45">
+            </div>
+
+            <div class="form-group">
+              <label for="incident-details">Détails supplémentaires :</label>
+              <textarea id="incident-details" name="details" placeholder="Informations additionnelles..."></textarea>
+            </div>
+          </fieldset>
+
+          <div style="display: flex; gap: 1rem; margin-top: 2rem;">
+            <button type="submit" class="btn btn-success">Signaler l'incident</button>
+            <button type="reset" class="btn btn-secondary">Annuler</button>
+          </div>
+        </form>
+      </section>
+    </main>
   </body>
 </html>
